name:                bufferbloat-tester
version:             0.1.0.0
synopsis:            Look for bufferbloat between two machines
homepage:            https://github.com/davecturner/bufferbloat-tester#readme
license:             Apache2
license-file:        LICENSE
author:              David Turner
maintainer:          dave.c.turner@gmail.com
copyright:           2017 David Turner
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         Please see the README on Github at <https://github.com/githubuser/bufferbloat-tester#readme>

executable bufferbloat-tester
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/davecturner/bufferbloat-tester
